@@ -1,20 +1,17 @@
 package org.zalando.nakadi.partitioning;
 
-import com.google.common.collect.ImmutableList;
-import com.google.common.collect.ImmutableMap;
-import org.json.JSONObject;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Component;
+import org.zalando.nakadi.domain.BatchItem;
 import org.zalando.nakadi.domain.EventType;
 import org.zalando.nakadi.domain.EventTypeBase;
+import org.zalando.nakadi.domain.NakadiMetadata;
 import org.zalando.nakadi.exceptions.runtime.InvalidEventTypeException;
 import org.zalando.nakadi.exceptions.runtime.NoSuchPartitionStrategyException;
 import org.zalando.nakadi.exceptions.runtime.PartitioningException;
-import org.zalando.nakadi.service.timeline.TimelineService;
 
 import java.util.List;
 import java.util.Map;
-import java.util.Random;
 
 import static org.zalando.nakadi.domain.EventCategory.UNDEFINED;
 import static org.zalando.nakadi.partitioning.PartitionStrategy.HASH_STRATEGY;
@@ -24,27 +21,27 @@ import static org.zalando.nakadi.partitioning.PartitionStrategy.USER_DEFINED_STR
 @Component
 public class PartitionResolver {
 
-    public static final List<String> ALL_PARTITION_STRATEGIES = ImmutableList.of(
+    public static final List<String> ALL_PARTITION_STRATEGIES = List.of(
             HASH_STRATEGY, USER_DEFINED_STRATEGY, RANDOM_STRATEGY);
 
     private final Map<String, PartitionStrategy> partitionStrategies;
-    private final TimelineService timelineService;
 
     @Autowired
-    public PartitionResolver(final TimelineService timelineService, final HashPartitionStrategy hashPartitionStrategy) {
-        this.timelineService = timelineService;
-
-        partitionStrategies = ImmutableMap.of(
+    public PartitionResolver(final HashPartitionStrategy hashPartitionStrategy) {
+        partitionStrategies = Map.of(
                 HASH_STRATEGY, hashPartitionStrategy,
                 USER_DEFINED_STRATEGY, new UserDefinedPartitionStrategy(),
-                RANDOM_STRATEGY, new RandomPartitionStrategy(new Random())
+                RANDOM_STRATEGY, new RandomPartitionStrategy()
         );
     }
 
     public void validate(final EventTypeBase eventType) throws NoSuchPartitionStrategyException,
             InvalidEventTypeException {
-        final String partitionStrategy = eventType.getPartitionStrategy();
 
+        final String partitionStrategy = eventType.getPartitionStrategy();
+        if (null == partitionStrategy) {
+            throw new InvalidEventTypeException("partition strategy must not be null");
+        }
         if (!ALL_PARTITION_STRATEGIES.contains(partitionStrategy)) {
             throw new NoSuchPartitionStrategyException("partition strategy does not exist: " + partitionStrategy);
         } else if (HASH_STRATEGY.equals(partitionStrategy) && eventType.getPartitionKeyFields().isEmpty()) {
@@ -56,8 +53,21 @@ public class PartitionResolver {
         }
     }
 
-    public String resolvePartition(final EventType eventType, final JSONObject eventAsJson)
+    public String resolvePartition(final EventType eventType, final BatchItem item,
+                                   final List<String> orderedPartitions)
             throws PartitioningException {
+
+        return getPartitionStrategy(eventType).calculatePartition(item, orderedPartitions);
+    }
+
+    public String resolvePartition(final EventType eventType, final NakadiMetadata recordMetadata,
+                                   final List<String> orderedPartitions)
+            throws PartitioningException {
+
+        return getPartitionStrategy(eventType).calculatePartition(recordMetadata, orderedPartitions);
+    }
+
+    private PartitionStrategy getPartitionStrategy(final EventType eventType) throws PartitioningException {
 
         final String eventTypeStrategy = eventType.getPartitionStrategy();
         final PartitionStrategy partitionStrategy = partitionStrategies.get(eventTypeStrategy);
@@ -65,10 +75,7 @@ public class PartitionResolver {
             throw new PartitioningException("Partition Strategy defined for this EventType is not found: " +
                     eventTypeStrategy);
         }
-
-        final List<String> partitions = timelineService.getTopicRepository(eventType)
-                .listPartitionNames(timelineService.getActiveTimeline(eventType).getTopic());
-        return partitionStrategy.calculatePartition(eventType, eventAsJson, partitions);
+        return partitionStrategy;
     }
 
 }
